[gd_scene load_steps=3 format=3 uid="uid://dv5ienhrr3f23"]

[ext_resource type="Script" path="res://scripts/menu_layer.gd" id="1_rjnbi"]
[ext_resource type="FontFile" uid="uid://cm6ojwf2bndin" path="res://assets/fonts/PixelOperator8.ttf" id="2_jcpbg"]

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource("1_rjnbi")

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 768.0
offset_bottom = 432.0

[node name="StartMessage" type="Label" parent="StartMenu"]
layout_mode = 0
offset_left = 153.0
offset_top = 94.0
offset_right = 609.0
offset_bottom = 335.0
theme_override_colors/font_color = Color(1, 0.964706, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/font = ExtResource("2_jcpbg")
theme_override_font_sizes/font_size = 32
text = "Flappy Bee 


Left click to play"
horizontal_alignment = 1

[node name="GameOverMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 765.0
offset_bottom = 428.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = -66.0
offset_right = 162.5
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="ScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.964706, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/font = ExtResource("2_jcpbg")
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.964706, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_fonts/font = ExtResource("2_jcpbg")
theme_override_font_sizes/font_size = 32
text = "High Score: 0"
horizontal_alignment = 1

[node name="Restart" type="Button" parent="GameOverMenu/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.964706, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jcpbg")
theme_override_font_sizes/font_size = 32
text = "Restart"

[connection signal="pressed" from="GameOverMenu/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
